actualizacion web testing tecnimotors

--- a/tecnimotors/src/app/filterbody/homellanta/homellanta.component.html
+++ b/tecnimotors/src/app/filterbody/homellanta/homellanta.component.html
@@ -206,7 +206,7 @@
                                         <a class="product__card--thumbnail__link display-block">
 
                                             <img class="product__card--thumbnail__img product__primary--img"
-                                                src="../../../assets/img/Imagen/{{item.codigo}}/{{item.codigo}}_1.png"
+                                                src="../../../assets/img/Imagen/{{item.codigo}}/{{item.codigo}}_1.jpg"
                                                 alt="product-img" (error)="imagenError($event)">
                                         </a>
                                     </div>
